syntax = "proto3";

package user;

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message User {
    string id = 1;
    string phoneNo = 2;
    string name = 3;
    string password = 4;
    string email = 5;
    string wallet_id = 6;
    string fcm_token = 7;
}